words wrapping correctly in text captions for pics

--- a/src/Blogs/BlogPage/BlogImages/blog-image-styles.css
+++ b/src/Blogs/BlogPage/BlogImages/blog-image-styles.css
@@ -18,9 +18,6 @@ img {
 }
 
 .BlogImages-mobile-responsive-images {
-    max-width: 400px;
-    margin-left: auto;
-    margin-right: auto;
     border: solid lightgrey;
     border-radius: 10px;
     margin-bottom: 20px;
@@ -35,6 +32,10 @@ img {
     height: 50px;
 }
 
-.BlogImages-mobile-text {
+.BlogImages-mobile-text-container {
     padding: 15px;
+}
+
+.BlogImages-mobile-text {
+    word-break: break-word;
 }
